--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start-client": "webpack serve --config webpack.client.config.js",
     "start-server": "ts-node src/server.ts",
     "test": "mocha --require ts-node/register 'test/**/subastas.test.ts'",
-    "test-api": "mocha --require ts-node/register 'test/**/usersAPI.test.ts'"
+    "test-users": "mocha --require ts-node/register 'test/**/userController.test.ts'",
+    "test-obras": "mocha --require ts-node/register 'test/**/obraController.test.ts'"
   },
   "author": "",
   "license": "ISC",
@@ -20,10 +21,12 @@
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.9",
     "@types/pg": "^8.11.10",
+    "@types/sinon": "^17.0.3",
     "chai": "^4.2.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "mocha": "^10.7.3",
+    "sinon": "^19.0.2",
     "supertest": "^7.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -40,7 +43,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "nunjucks": "^3.2.4",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "winston": "^3.17.0"
   }
 }
