--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "pg": "^8.13.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0"
   }
 }
