--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/pg": "^8.11.10",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "chai": "^4.2.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
@@ -50,7 +52,9 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "pg": "^8.13.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
-    "winston-elasticsearch": "^0.19.0"
+    "winston-elasticsearch": "^0.11.0"
   }
 }
